--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
     "ratio": "cpp",
     "stop_token": "cpp",
     "thread": "cpp",
-    "mutex": "cpp"
+    "mutex": "cpp",
+    "xstddef": "cpp"
   }
 }
